--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -14,6 +14,12 @@ spring:
           search-paths: discovery-server
           try-master-branch: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 
 
 
